refactor(java): 优化Java代码实现细节