@@ -288,7 +288,7 @@ public class SystemDeptService {
           }
         }
         // 编辑部门时不显示自己以及自己下级的数据, 避免出现PID数据环形问题
-        depts = depts.stream().filter(i -> !ids.contains(i.getId())).collect(Collectors.toList());
+        depts = depts.stream().filter(i -> !ids.contains(i.getId())).toList();
       }
       deptSet1.addAll(depts);
     }
@@ -296,7 +296,7 @@ public class SystemDeptService {
     // 构建部门树
     Set<SystemDeptVo> trees = new LinkedHashSet<>();
     Set<SystemDeptVo> deptSet = new LinkedHashSet<>();
-    List<String> deptNames = deptList.stream().map(SystemDeptVo::getName).collect(Collectors.toList());
+    List<String> deptNames = deptList.stream().map(SystemDeptVo::getName).toList();
     boolean isChild;
     for (SystemDeptVo dept : deptList) {
       isChild = false;
